@@ -1,6 +1,6 @@
-Version 2.24 of module Getopt::Long is now available via CPAN. It
+Version 2.25 of module Getopt::Long is now available via CPAN. It
 should soon appear in directory authors/Johan_Vromans as file
-Getopt-Long-2.24.tar.gz. It will be standard part of Perl 5.6.1 and 5.7.0.
+Getopt-Long-2.25.tar.gz. It will be standard part of Perl 5.6.1 and 5.7.x.
 
 Module Getopt::Long implements an extended getopt function called
 GetOptions(). This function implements the POSIX standard for command
@@ -10,16 +10,16 @@ the traditional one-letter options (including option bundling).
 The README document is attached to this message.
 
 The best way to download from CPAN is to use a Web browser and point
-it to http://www.perl.com/CPAN/ (include the final slash!). It will
-automagically be redirected to a CPAN site in your neighborhood. 
-URL: http://www.perl.com/CPAN/authors/Johan_Vromans
+it to the CPAN search engine:
+  http://search.cpan.org/search?mode=module&query=Getopt::Long
+  http://search.cpan.org/search?module=Getopt::Long
 
-Changes in version 2.24
+Changes in version 2.25
 -----------------------
 
 === to be filled in; see CHANGES ===
 
-Previous released version was 2.23, for Perl 5.6.0.
+Previous released version was 2.24, for Perl 5.7.0.
 
 ---- README ----
 
